--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -5,14 +5,16 @@
     margin-bottom: 10px;
     transition: all 0.3s linear;
 }
-.form {
+.container {
     max-width: 700px;
-    margin: 0 auto;
+}
+.form {
     text-align: center;
     border: 2px solid black;
     border-radius: 6px;
     background-color: #e7e3e3;
     padding: 20px;
+    margin-bottom: 20px;
 }
 .form-control {
     padding: 0;
@@ -35,4 +37,11 @@
     --bd-callout-color: var(--bs-danger-text-emphasis);
     --bd-callout-bg: var(--bs-danger-bg-subtle);
     --bd-callout-border: var(--bs-danger-border-subtle);
+}
+.comments-container {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
 }
